--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -1,18 +1,30 @@
 Vagrant.configure("2") do |config|
 
-    config.vm.provider :virtualbox do |v|
-      v.memory = 512
-    end
+  config.vm.provider :virtualbox do |v|
+    v.memory = 512
+  end
 
-    config.vm.define "dbserver" do |db|
-      db.vm.box = "ubuntu/xenial64"
-      db.vm.hostname = "dbserver"
-      db.vm.network :private_network, ip: "10.10.10.10"
-    end
+  config.vm.define "dbserver" do |db|
+    db.vm.box = "ubuntu/xenial64"
+    db.vm.hostname = "dbserver"
+    db.vm.network :public_network, ip: "10.10.10.10"
 
-    config.vm.define "appserver" do |app|
-      app.vm.box = "ubuntu/xenial64"
-      app.vm.hostname = "appserver"
-      app.vm.network :private_network, ip: "10.10.10.20"
+    db.vm.synced_folder ".", "/vagrant"
+
+    db.vm.provision :guest_ansible do |ansible|
+      ansible.playbook = "playbooks/site.yml"
+      ansible.groups = {
+      "db" => ["dbserver"],
+      "db:vars" => {"mongo_bind_ip" => "0.0.0.0"}
+      }
     end
   end
+
+  config.vm.define "appserver" do |app|
+    app.vm.box = "ubuntu/xenial64"
+    app.vm.hostname = "appserver"
+    app.vm.network :public_network, ip: "10.10.10.20"
+
+    app.vm.synced_folder ".", "/vagrant"
+  end
+end
