--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -1,23 +1,22 @@
 - name: Deploy App
   hosts: app
-  become: true
-  tasks:
-    - name: Install git
-      command: "apt install -y git"
+  vars:
+    deploy_user: appuser
 
+  tasks:
     - name: Fetch the latest version of application code
       git:
-        repo: "https://github.com/express42/reddit.git"
-        dest: /home/ubuntu/reddit
+        repo: 'https://github.com/express42/reddit.git'
+        dest: "/home/{{ deploy_user }}/reddit"
         version: monolith
       notify: restart puma
 
     - name: bundle install
       bundler:
         state: present
-        chdir: /home/ubuntu/reddit
+        chdir: "/home/{{ deploy_user }}/reddit"
 
   handlers:
-    - name: restart puma
-      become: true
-      systemd: name=puma state=restarted
+  - name: restart puma
+    become: true
+    systemd: name=puma state=restarted
