--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,5 +1,5 @@
 {
     "folder_id": "example",
     "source_image_family": "example",
-    "service_account_key_file": "key.json"
+    "service_account_key_file": "packer/key.json"
 }
